--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     
     <div class="welcome-marquee">
-        <p>WELCOME TO PAWAN SOCIAL MEDIA SERVICE PAGE</p>
+    <marquee behavior="scroll" direction="left">
+        WELCOME TO PAWAN SOCIAL MEDIA SERVICE PAGE
+    </marquee>
     </div>
 
     <header>
@@ -381,3 +383,4 @@
 </body>
                                                                 </html>
                         
+
