--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         WELCOME TO PAWAN SOCIAL MEDIA SERVICE PAGE
     </marquee>
     </div>
-
+<section class="banner-section">
+    <div class="banner-content">
+        <h1>पावरफुल इंस्टाग्राम ग्रोथ सर्विस</h1>
+        <p>भारत में सबसे सस्ते दाम पर तेज़ फॉलोअर्स, लाइक और व्यूज पाएं!</p>
+        <a href="#services" class="banner-button">अभी हमारी कीमतें देखें</a>
+    </div>
+</section>
+    
     <header>
         <div class="logo">
             <img src="pawan-logo.png" alt="Pawan Service Logo" class="logo-img">
@@ -384,6 +391,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
