--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         <section id="hero" class="hero-section">
             <h2>अपने सोशल मीडिया को तेज़ी से बढ़ाएँ!</h2>
             <p>इंस्टाग्राम फॉलोअर्स, यूट्यूब व्यूज, और बहुत कुछ सस्ते दामों पर प्राप्त करें। **कीमतें देखें और अभी हमें WhatsApp करें!**</p>
+            <ul class="service-bullets">
+    <li>Instagram Services (Followers, Likes, Views)</li>
+    <li>Facebook Services (Likes, Page Views, Shares)</li>
+    <li>YouTube Services (Views, Subscribers, Watch Time)</li>
+    <li>Telegram Services (Members, Views)</li>
+            </ul>
             
             <a href="https://wa.link/e7nous" target="_blank" class="whatsapp-cta-button">
                 <img src="whatsapp-logo.png" alt="WhatsApp Icon" class="cta-logo">
@@ -390,6 +396,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
