--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <meta name="google-site-verification" content="BtwqQ_gSH7E2T2O9g9PQbc7pjkTO80g5y2ZaSv0xkBI" />
 </head>
 <body>
-   
+<div class="top-video-container">
+    <video controls autoplay muted loop playsinline class="website-video">
+        <source src="1000213081.mp4" type="video/mp4">
+        आपका ब्राउज़र वीडियो टैग को सपोर्ट नहीं करता है।
+    </video>
+</div>
+    
 <section class="banner-section">
     <div class="banner-content">
 
@@ -397,6 +403,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
