--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="top-video-container">
-    <video controls autoplay muted loop playsinline class="website-video">
+    <video controls autoplay loop playsinline class="website-video">
         <source src="1765798596227.mp4" type="video/mp4">
         आपका ब्राउज़र वीडियो टैग को सपोर्ट नहीं करता है।
     </video>
@@ -403,6 +403,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
