--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         आपका ब्राउज़र वीडियो टैग को सपोर्ट नहीं करता है।
     </video>
 </div>
+  <div class="welcome-marquee">
+    <marquee behavior="scroll" direction="left" scrollamount="12">
+        WELCOME TO PAWAN SOCIAL MEDIA SERVICE PAGE
+    </marquee>
+  </div>
     
 <section class="banner-section">
     <div class="banner-content">
@@ -403,6 +408,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
