--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
      
     <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="BtwqQ_gSH7E2T2O9g9PQbc7pjkTO80g5y2ZaSv0xkBI" />
+    <link rel="icon" type="image/png" href="pawan-logo.pngg">
+</head>
 </head>
 <body>
 <div class="top-video-container">
@@ -404,6 +406,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
