--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      
     <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="BtwqQ_gSH7E2T2O9g9PQbc7pjkTO80g5y2ZaSv0xkBI" />
-    <link rel="icon" type="image/png" href="pawan-logo.png">
+    <link rel="icon" type="image/png" href="pawan-logo-final.png">
 </head>
 </head>
 <body>
@@ -37,7 +37,7 @@
 
     <header>
         <div class="logo">
-            <img src="pawan-logo.png" alt="Pawan Service Logo" class="logo-img">
+            <img src="pawan-logo-final.png" alt="Pawan Service Logo" class="logo-img">
         </div>
         <nav>
             <ul>
@@ -406,6 +406,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
