--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </head>
 </head>
 <body>
+    <div class="whatsapp-float">
+    <a href="https://wa.link/e7nous" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1024px-WhatsApp.svg.png" alt="WhatsApp" width="50" height="50">
+    </a>
+</div>
+
 <div class="top-video-container">
     <video controls autoplay loop playsinline class="website-video">
         <source src="1765798596227.mp4" type="video/mp4">
@@ -406,6 +412,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
