--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="BtwqQ_gSH7E2T2O9g9PQbc7pjkTO80g5y2ZaSv0xkBI" />
     <link rel="icon" type="image/png" href="pawan-logo-final.png">
-</head>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Pawan Media Service",
+  "url": "https://pawan-media-service.vercel.app/"
+}
+</script>
 </head>
 <body>
     <div class="whatsapp-float">
@@ -412,6 +419,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
