--- a/index.html
+++ b/index.html
@@ -321,9 +321,10 @@
                 <a href="https://wa.link/e7nous" target="_blank" class="order-btn">अभी आर्डर करें</a>
             </div>
 
-            <p style="text-align: center; font-size: 1.1em; margin: 20px 0; color: #007bff; font-weight: bold;">
-                🎉 Facebook की सभी सेवाएँ पूरी हुईं। अब YouTube और अन्य सेवाएँ देखें।
-            </p>
+            <div class="pink-text-box">
+    <p>🎉 Facebook की सभी सेवाएँ पूरी हुईं! अब नीचे YouTube और अन्य सेवाएँ देखें 👇</p>
+            </div>
+            
             <hr style="border: 0; border-top: 1px solid #ddd; margin: 30px 0;">
 
             <div class="price-table-container">
@@ -463,6 +464,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
