--- a/index.html
+++ b/index.html
@@ -369,14 +369,14 @@
                 <a href="https://wa.link/e7nous" target="_blank" class="order-btn">अभी आर्डर करें</a>
             </div>
             
-            <div class="highlight-box">
-                <h4>🎉 सभी प्लेटफ़ॉर्म सेवाएँ 🎉</h4>
-                <p>
-                    किसी भी सेवा के लिए, कृपया दिए गए WhatsApp नंबर पर मैसेज करके पूरी मूल्य सूची प्राप्त करें और ऑर्डर करें।
-                </p>
-                <a href="https://wa.link/e7nous" target="_blank" class="mini-whatsapp-cta">
-                    संपर्क के लिए WhatsApp करें!
-                </a>
+            <div class="pink-text-box">
+    <h3>🎉 सभी प्लेटफ़ॉर्म सेवाएँ 🎉</h3>
+    <p>किसी भी सेवा के लिए, कृपया दिए गए WhatsApp नंबर पर मैसेज करें।</p>
+    <br>
+    <a href="https://wa.link/e7nous" target="_blank" style="background: #25d366; color: white; padding: 10px 20px; border-radius: 20px; text-decoration: none; font-weight: bold;">
+        संपर्क के लिए WhatsApp करें
+    </a>
+            </div>
             <div class="pink-text-box">
     <p>🔥 इनके अलावा और भी कई सेवाएँ उपलब्ध हैं!</p>
     <p>किसी भी सर्विस के लिए तुरंत संपर्क करें।</p>
@@ -469,6 +469,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
