--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Pawan Media Service | सस्ते Instagram Followers, Views और सोशल मीडिया सेवाएँ</title>
 
     <meta name="description" content="Pawan Media Service: Instagram Followers, YouTube Views, Facebook Likes, और सभी सोशल मीडिया सेवाएँ सबसे सस्ते दामों पर प्राप्त करें। 24/7 सपोर्ट।">
-     
+     <meta property="og:site_name" content="Pawan Media Service">
+<meta property="og:title" content="Pawan Media Service | SMM Panel">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://pawan-media-service.vercel.app/">
+<meta name="apple-mobile-web-app-title" content="Pawan Service">
     <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="BtwqQ_gSH7E2T2O9g9PQbc7pjkTO80g5y2ZaSv0xkBI" />
     <link rel="icon" type="image/png" href="pawan-logo-final.png">
@@ -464,6 +468,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
