--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta property="og:title" content="Pawan Media Service | SMM Panel">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://pawan-media-service.vercel.app/">
+<meta property="og:image" content="https://pawan-media-service.vercel.app/pawan-logo-final.png">    
 <meta name="apple-mobile-web-app-title" content="Pawan Service">
     <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="BtwqQ_gSH7E2T2O9g9PQbc7pjkTO80g5y2ZaSv0xkBI" />
@@ -468,6 +469,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
