--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
                 </table>
                 <a href="https://wa.link/e7nous" target="_blank" class="order-btn">अभी आर्डर करें</a>
             </div>
+            <div style="margin: 30px 0 30px 0; text-align: center; background: #fff; padding: 15px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+    <video width="100%" controls autoplay loop muted playsinline style="border-radius: 15px; border: 1px solid #eee;">
+        <source src="video2.mp4" type="video/mp4">
+        आपका ब्राउज़र वीडियो सपोर्ट नहीं करता।
+    </video>
+    <p style="margin-top: 10px; font-weight: 800; color: #d63384; font-size: 1.1em;">
+        🔥 Instagram like oder live proff 🔥
+    </p>
+            </div>
             
             <div class="price-table-container">
                 <h4><img src="instagram-logo.png" alt="Instagram Logo" class="service-logo"> 3. Instagram Likes सेवाएँ (तेज़ डिलीवरी)</h4>
@@ -450,6 +459,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
