--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <a href="https://wa.link/e7nous" target="_blank" class="order-btn">अभी आर्डर करें</a>
             </div>
             <div style="margin: 30px 0 30px 0; text-align: center; background: #fff; padding: 15px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-    <video width="100%" controls autoplay loop muted playsinline style="border-radius: 15px; border: 1px solid #eee;">
+    <video width="100%" controls autoplay loop muted playsinline preload="auto" style="border-radius: 15px; border: 1px solid #eee;">
         <source src="video2.mp4" type="video/mp4">
         आपका ब्राउज़र वीडियो सपोर्ट नहीं करता।
     </video>
@@ -459,6 +459,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
