--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         आपका ब्राउज़र वीडियो सपोर्ट नहीं करता।
     </video>
     <p style="margin-top: 10px; font-weight: 800; color: #007bff; font-size: 1.1em;">
-    📺 वीडियो देखें: ऑर्डर कैसे करें और संपर्क जानकारी 📺
+    📹 वीडियो देखें: इस वीडियो में मैने बताया है कि कैसे आप ऑडर करने के लिए मुझे मैसेज कर सकते है 👆
     </p>
                 
             </div>
@@ -469,6 +469,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
