--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         
         <section id="pricing" class="pricing-section">
             <div style="margin: 30px 0 30px 0; text-align: center; background: #fff; padding: 15px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-    <video width="100%" controls autoplay loop muted playsinline preload="auto" style="border-radius: 15px; border: 1px solid #eee;">
-        <source src="video1.mp4" type="video/mp4">
-        आपका ब्राउज़र वीडियो सपोर्ट नहीं करता।
+    <video width="100%" controls playsinline preload="auto" style="border-radius: 15px; border: 1px solid #eee;">
+    <source src="video1.mp4" type="video/mp4">
+    आपका ब्राउज़र वीडियो सपोर्ट नहीं करता।
     </video>
     <p style="margin-top: 10px; font-weight: 800; color: #007bff; font-size: 1.1em;">
     📹 वीडियो देखें: इस वीडियो में मैने बताया है कि कैसे आप ऑडर करने के लिए मुझे मैसेज कर सकते है 👆
@@ -174,9 +174,9 @@
                 <a href="https://wa.link/e7nous" target="_blank" class="order-btn">अभी आर्डर करें</a>
             </div>
             <div style="margin: 30px 0 30px 0; text-align: center; background: #fff; padding: 15px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-    <video width="100%" controls autoplay loop muted playsinline preload="auto" style="border-radius: 15px; border: 1px solid #eee;">
-        <source src="video2.mp4" type="video/mp4">
-        आपका ब्राउज़र वीडियो सपोर्ट नहीं करता।
+    <video width="100%" controls playsinline preload="auto" style="border-radius: 15px; border: 1px solid #eee;">
+    <source src="video2.mp4" type="video/mp4">
+    आपका ब्राउज़र वीडियो सपोर्ट नहीं करता।
     </video>
     <p style="margin-top: 10px; font-weight: 800; color: #d63384; font-size: 1.1em;">
         🔥 Instagram like oder live proff 🔥
@@ -469,6 +469,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
