--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
                         <tr> <th>सेवा</th> <th>विवरण</th> <th>कीमत (₹ प्रति 1000)</th> </tr>
                     </thead>
                     <tbody>
-                        <tr> <td>सब्सक्राइबर (गारंटीड)</td> <td>30 दिन की रिफिल गारंटी</td> <td>₹1500</td> </tr>
-                        <tr> <td>लाइक्स</td> <td>तेजी से डिलीवरी</td> <td>₹80</td> </tr>
+                        <tr> <td>सब्सक्राइबर (गारंटीड)</td> <td>lifetime की रिफिल गारंटी</td> <td>₹2400</td> </tr>
+                        <tr> <td>लाइक्स</td> <td>तेजी से डिलीवरी</td> <td>₹90</td> </tr>
                     </tbody>
                 </table>
                 <a href="https://wa.link/e7nous" target="_blank" class="order-btn">अभी आर्डर करें</a>
@@ -406,7 +406,7 @@
             <div class="faq-item">
                 <button class="faq-question">ऑर्डर पूरा होने में कितना समय लगता है?</button>
                 <div class="faq-answer">
-                    <p>अधिकांश छोटे ऑर्डर (जैसे 1K-5K) 15 मिनट से 2 घंटे के भीतर पूरे हो जाते हैं। बड़े ऑर्डर (10K+) के लिए 24 घंटे तक का समय लग सकता है। हम WhatsApp पर आपको लाइव अपडेट देते हैं।</p>
+                    <p>अधिकांश छोटे ऑर्डर (जैसे 1K-5K) 2 मिनट से 30 मिनट के भीतर पूरे हो जाते हैं। बड़े ऑर्डर (10K+) के लिए 3 घंटे तक का समय लग सकता है। हम WhatsApp पर आपको लाइव अपडेट देते हैं।</p>
                 </div>
             </div>
             
@@ -420,14 +420,14 @@
             <div class="faq-item">
                 <button class="faq-question">अगर फॉलोअर्स/लाइक्स कम हो जाएं (ड्रॉप) तो क्या होगा?</button>
                 <div class="faq-answer">
-                    <p>हम 30 दिन की रिफिल गारंटी देते हैं। अगर इस अवधि में कोई ड्रॉप होता है, तो हम उन्हें बिल्कुल मुफ्त में दोबारा भर देंगे।</p>
+                    <p>हम 365 दिन की रिफिल गारंटी देते हैं। अगर इस अवधि में कोई ड्रॉप होता है, तो हम उन्हें बिल्कुल मुफ्त में दोबारा भर देंगे।</p>
                 </div>
             </div>
 
             <div class="faq-item">
                 <button class="faq-question">मैं ऑर्डर कैसे करूँ?</button>
                 <div class="faq-answer">
-                    <p>ऑर्डर करने के लिए, आपको बस हमें WhatsApp पर मैसेज करना है। हमारी टीम 5 मिनट के भीतर आपसे संपर्क करेगी और आपकी ज़रूरत के हिसाब से ऑर्डर पूरा करेगी।</p>
+                    <p>ऑर्डर करने के लिए, आपको बस हमें WhatsApp पर मैसेज करना है। में 1 मिनट के भीतर आपसे संपर्क करूंगा और आपकी ज़रूरत के हिसाब से ऑर्डर पूरा करूंगा।</p>
                 </div>
             </div>
 
@@ -469,6 +469,7 @@
 </body>
                                                                 </html>
                         
+
 
 
 
